--- a/latest-news.scss
+++ b/latest-news.scss
@@ -1,15 +1,19 @@
 .latest-news {
   position: relative;
   min-height: 100vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 3rem;
   align-items: center;
   .p-top {
     position: absolute;
-    top: 3%;
-    left: 0;
+    color: $creme;
+    top: 1%;
+    left: 3%;
     font-size: 12rem;
+    letter-spacing: 1rem;
+    z-index: -1;
   }
 }
 
@@ -57,6 +61,18 @@
   }
 }
 
+.latest-news-title {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  align-items: center;
+  h2 {
+    font-size: 3rem;
+  }
+  p {
+    font-size: 1.5rem;
+  }
+}
 .news-text {
   padding: 1rem 1rem 2rem 1rem;
   width: 80%;
