--- a/style.css
+++ b/style.css
@@ -235,6 +235,7 @@ footer {
   font-size: 2rem;
 }
 .footer-link-input .email-input {
+  display: flex;
   width: 100%;
 }
 .footer-link-input .email-input input {
@@ -341,6 +342,7 @@ footer {
 .latest-news {
   position: relative;
   min-height: 100vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 3rem;
@@ -348,9 +350,12 @@ footer {
 }
 .latest-news .p-top {
   position: absolute;
-  top: 3%;
-  left: 0;
+  color: #f1ece4;
+  top: 1%;
+  left: 3%;
   font-size: 12rem;
+  letter-spacing: 1rem;
+  z-index: -1;
 }
 
 .latest-news-title {
@@ -396,6 +401,19 @@ footer {
   cursor: pointer;
   background-color: #c8a96a;
   color: #ffffff;
+}
+
+.latest-news-title {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  align-items: center;
+}
+.latest-news-title h2 {
+  font-size: 3rem;
+}
+.latest-news-title p {
+  font-size: 1.5rem;
 }
 
 .news-text {
@@ -523,7 +541,6 @@ footer {
   flex-direction: column;
   gap: 2rem;
   text-align: center;
-  z-index: 999;
 }
 
 .chefs-container {
@@ -545,6 +562,73 @@ footer {
 }
 .chef-img:nth-child(3) {
   box-shadow: -5em 10em 10em rgba(255, 255, 255, 0.13), -5em -6em 10em rgba(255, 255, 255, 0.178);
+}
+
+.restaurant-photos-container {
+  position: relative;
+  min-height: 140vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+  padding: 5rem 0;
+}
+.restaurant-photos-container button {
+  padding: 1rem 2rem;
+  background-color: #ffffff;
+  font-weight: bold;
+  border: 1px solid rgba(199, 199, 199, 0.452);
+  border-radius: 0.3rem;
+}
+.restaurant-photos-container button:hover {
+  cursor: pointer;
+  color: white;
+  background-color: #c8a96a;
+}
+.restaurant-photos-container .p-low {
+  position: absolute;
+  color: #f1ece4;
+  top: 1%;
+  left: 3%;
+  font-size: 12rem;
+  letter-spacing: 2rem;
+  z-index: -1;
+}
+
+.restaurant-photos-title {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  align-items: center;
+}
+.restaurant-photos-title h2 {
+  font-size: 3rem;
+}
+.restaurant-photos-title p {
+  font-size: 1.5rem;
+}
+
+.resto-photos {
+  margin-top: 5rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  row-gap: 1rem;
+  column-gap: 1rem;
+}
+.resto-photos img {
+  width: 100%;
+}
+
+.photos-together {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+}
+.photos-together img {
+  max-height: 400px;
+  width: 50%;
 }
 
 * {
