--- a/layout/choose_your_best_category.scss
+++ b/layout/choose_your_best_category.scss
@@ -19,11 +19,11 @@
         }
     .title_choose_your_category{
         z-index: 1;
-        top: 150px;
+        padding: 100px 20px 0 20px;
         h2{
             font-size: 60px;
             font-weight: 100;
-            letter-spacing: -4px;
+            letter-spacing: -2px;
         }
         p{
             font-family: 'Kanit', sans-serif;
@@ -36,9 +36,10 @@
         justify-content: center;
         flex-wrap: wrap;
         width: 100%;
-        padding: 150px 0;
+        padding: 150px 0 200px 0;
         gap: 30px;
         .card{
+            z-index: 1;
             width: 170px;
             height: 200px;
             background-color: $white;
@@ -65,42 +66,39 @@
     }
 }
 }
-
-@media only screen and (max-width:1200px){
-    .choose_your_best_category{
-        background-size: cover;
-        padding-bottom : 30px;
-        background-size: 90%;
-
-    }
-}
-
-@media only screen and (max-width:950px){
-    .choose_your_best_category{
-        padding-bottom : 50px;
-        .title_choose_your_category{
-            h2{
-                padding-top: 110px;
-            }
-        }
-        .cards{
-            padding: 110px 0;
-        }
-
-    }
-}
-@media only screen and (max-width:650px){
-    .choose_your_best_category{
-        padding-bottom : 120px;
-        .category_absolute{
-            font-size: 5rem;
-        }
-        .title_choose_your_category{
-            h2{
-                padding-top: 110px;
-                letter-spacing: -2px;
+@media only screen and (max-width: 1400px ){
+    main{
+        .bg_color{
+            .choose_your_best_category{
+                .title_choose_your_category{
+                    padding: 100px 20px 0 20px;
+                }
+                .category_absolute{
+                    font-size: 200px;
+                }
             }
         }
     }
-}
 
+}
+@media only screen and (max-width: 450px ){
+    main{
+        .bg_color{
+            .choose_your_best_category{
+                .title_choose_your_category{
+                    padding: 100px 30px 0px 30px;
+                    h2{
+                        font-size: 40px;
+                    }
+                }
+                .category_absolute{
+                    font-size: 200px;
+                }
+            }
+            .cards{
+                @include displayCenterColumnNoJustify;
+            } 
+        }
+    }
+
+}
