--- a/layout/why_choose_us.scss
+++ b/layout/why_choose_us.scss
@@ -6,20 +6,20 @@ main{
         .circle_food{
             position: absolute;
             left: 50%;
-            transform: translateX(-50%);
-            top: -10%;
+            top: 0;
+            transform: translateY(-20%) translateX(-50%);
             border-radius: 50%;
             border: solid 30px $white;
-            z-index: 0;
+            width: 40vw;
         }
         .images_top_choose_us{
             width: 100%;  
-            min-height: 400px;
+            min-height: 300px;
             position: relative;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 10% 7% 5% 10%;
+            padding: 10% 7% 0 10%;
             img{       
                 z-index: 1;
             }
@@ -44,6 +44,8 @@ main{
             }
             p{
                 padding-top: 20px;
+                font-family: 'Kanit', sans-serif;
+                font-weight: 400;
             }
             .icon_about_absolute{
                 position: absolute;
@@ -76,8 +78,9 @@ main{
                     padding: 20px 30px;
                     border-radius: 5px;
                     font-family: "brands";
-                    font-weight: 400;
+                    font-weight: 500;
                     color: $white;
+                    font-family: 'Kanit', sans-serif;
 
                     i{
                         padding-left: 10px;
@@ -89,79 +92,12 @@ main{
 
     }
 }
-
-@media only screen and (max-width:1600px){
-    .why_choose_us{
-        .circle_food{
-            width: 40%;
-        }
-        .images_top_choose_us{
-            padding: 10% 2% 2% 10%;
-
-        } 
-
-        .about_us{
-            .title_about_us{
-                h2{
-                    margin-top: 30px;
-                }
-                .icon_about_absolute{
-                    top:0;
-                    right: 10%;
-                }
-            }
-            .contenu_about_us{
-                margin: 7% 15%;
-            }
-        }
-    }
-}
-@media only screen and (max-width:1300px){
-
-    .about_us{
-        .title_about_us{
-            h2{
-                font-size: 3rem;
-                margin-top: 100px;
-            }
-            .icon_about_absolute{
-                top:0;
-                right: 10%;
-            }
-        }
-            .contenu_about_us{
-                margin: 7% 10%;
-            }
-
-            .about_us_absolute{
-                top: 70px;
-                font-size: 6rem;
-            }
-        }
-    }
-
-@media only screen and (max-width:1200px){
+@media only screen and (max-width:1500px){
     .why_choose_us{
         .images_top_choose_us{
-            padding: 10% 2% 2% 10%; 
             img{
-                width: 200px;
+                width: 230px
             }
-        } 
-        .about_us{
-            .contenu_about_us{
-                margin: 7% 5%;
-            }
-        }
-    }
-}
-
-
-@media only screen and (max-width:950px){
-    .why_choose_us{
-        .circle_food{
-            width: 50%;
-            border: solid 10px;
         }
         .about_us{
             .about_us_absolute{
@@ -174,7 +110,49 @@ main{
                 }
                 .icon_about_absolute{
                     top:0;
-                    right: 10%;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    width: 100px;
+                }
+            }  
+            .contenu_about_us{
+                width: 90%;
+            }
+        }
+    }
+}
+@media only screen and (max-width:1200px){
+    .why_choose_us{
+        .images_top_choose_us{
+            img{
+                width: 200px;
+            }
+        }
+    }
+}
+
+
+
+@media only screen and (max-width:1000px){
+    .why_choose_us{
+        .images_top_choose_us{
+            img{
+                width: 180px;
+            }
+        }
+        .about_us{
+            .about_us_absolute{
+                font-size: 7rem;
+            }
+            .title_about_us{
+                h2{
+                    font-size: 2rem;
+                    margin-top: 100px;
+                }
+                .icon_about_absolute{
+                    top:0;
+                    left: 50%;
+                    transform: translateX(-50%);
                     width: 100px;
                 }
             }  
@@ -182,121 +160,27 @@ main{
                 margin: 15% 5%;
                 flex-direction: column;
                 text-align: center;
-                .text_about_us{
-                    p{
-                        font-size: 1.1rem;
-                    }
-                }
-
             }
         }
     }
 }
 
-@media only screen and (max-width:650px){   
+@media only screen and (max-width:700px){
     .why_choose_us{
-        .circle_food{
-            width: 80%;
-            border: solid 10px;
-        }
-        .images_top_choose_us{
-            flex-direction: column;
-            img{
-                &:first-child{
-                    margin-top: 180px;
-                    margin-bottom: 30px;
-                }
-            }
-        } 
-        .about_us{
-            .about_us_absolute{
-                font-size: 5rem;
-            }
-        }
-    }
-}
-@media only screen and (max-width:450px){   
-    .why_choose_us{
-        .about_us{
-            .about_us_absolute{
-                font-size: 3.5rem;
-            }
-            .title_about_us{
-
-                h2{
-                    font-size: 1.5rem;
-                    margin-top: 130px;
-                }
-            } 
-        }
-    }
-}
-@media only screen and (max-width:350px){   
-    .why_choose_us{
-        .circle_food{
-            width: 100%;
-            border: solid 10px;
-        }
         .images_top_choose_us{
             img{
-                margin-top: 70px;
-            }
-        } 
-    .about_us{
-        .about_us_absolute{
-            font-size: 3rem;
-        }
-        .title_about_us{
-            h2{
-                font-size: 1.5rem;
-                margin-top: 120px;
-            }
-        } 
-        .contenu_about_us{
-    
-            .text_about_us{
-
-                p{
-                    font-size: 1rem;
-                    padding: 0% 10%;
-                }
+                width: 150px;
             }
         }
     }
 }
-}
-@media only screen and (max-width:300px){   
+@media only screen and (max-width:500px){
     .why_choose_us{
-    .about_us{
-        .about_us_absolute{
-            font-size: 2.5rem;
-            top:120px;
-        }
-        .title_about_us{
-            h2{
-                font-size: 1rem;
-                margin-top: 100px;
-            }
-            p{
-                font-size: 0.8rem;
-            }
-            .icon_about_absolute{
-                width: 70px;
-                top:0;
-                right: 10%;
-            }
-        } 
-        .contenu_about_us{
-            .text_about_us{
-                p{
-                    font-size: 1rem;
-                    line-height: 30px;
-                    padding: 0% 20%;
-                }
+        .images_top_choose_us{
+            img{
+                width: 100px;
             }
         }
     }
 }
-}
-
 
