--- a/style.css
+++ b/style.css
@@ -222,12 +222,12 @@ header .contenu_header a i {
 }
 .bg_color .choose_your_best_category .title_choose_your_category {
   z-index: 1;
-  top: 150px;
+  padding: 100px 20px 0 20px;
 }
 .bg_color .choose_your_best_category .title_choose_your_category h2 {
   font-size: 60px;
   font-weight: 100;
-  letter-spacing: -4px;
+  letter-spacing: -2px;
 }
 .bg_color .choose_your_best_category .title_choose_your_category p {
   font-family: "Kanit", sans-serif;
@@ -238,10 +238,11 @@ header .contenu_header a i {
   justify-content: center;
   flex-wrap: wrap;
   width: 100%;
-  padding: 150px 0;
+  padding: 150px 0 200px 0;
   gap: 30px;
 }
 .bg_color .choose_your_best_category .cards .card {
+  z-index: 1;
   width: 170px;
   height: 200px;
   background-color: #FFFFFF;
@@ -266,34 +267,28 @@ header .contenu_header a i {
   color: #C8A96A;
 }
 
-@media only screen and (max-width: 1200px) {
-  .choose_your_best_category {
-    background-size: cover;
-    padding-bottom: 30px;
-    background-size: 90%;
+@media only screen and (max-width: 1400px) {
+  main .bg_color .choose_your_best_category .title_choose_your_category {
+    padding: 100px 20px 0 20px;
+  }
+  main .bg_color .choose_your_best_category .category_absolute {
+    font-size: 200px;
   }
 }
-@media only screen and (max-width: 950px) {
-  .choose_your_best_category {
-    padding-bottom: 50px;
+@media only screen and (max-width: 450px) {
+  main .bg_color .choose_your_best_category .title_choose_your_category {
+    padding: 100px 30px 0px 30px;
   }
-  .choose_your_best_category .title_choose_your_category h2 {
-    padding-top: 110px;
+  main .bg_color .choose_your_best_category .title_choose_your_category h2 {
+    font-size: 40px;
   }
-  .choose_your_best_category .cards {
-    padding: 110px 0;
+  main .bg_color .choose_your_best_category .category_absolute {
+    font-size: 200px;
   }
-}
-@media only screen and (max-width: 650px) {
-  .choose_your_best_category {
-    padding-bottom: 120px;
-  }
-  .choose_your_best_category .category_absolute {
-    font-size: 5rem;
-  }
-  .choose_your_best_category .title_choose_your_category h2 {
-    padding-top: 110px;
-    letter-spacing: -2px;
+  main .bg_color .cards {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
   }
 }
 main .why_choose_us {
@@ -304,20 +299,20 @@ main .why_choose_us {
 main .why_choose_us .circle_food {
   position: absolute;
   left: 50%;
-  transform: translateX(-50%);
-  top: -10%;
+  top: 0;
+  transform: translateY(-20%) translateX(-50%);
   border-radius: 50%;
   border: solid 30px #FFFFFF;
-  z-index: 0;
+  width: 40vw;
 }
 main .why_choose_us .images_top_choose_us {
   width: 100%;
-  min-height: 400px;
+  min-height: 300px;
   position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10% 7% 5% 10%;
+  padding: 10% 7% 0 10%;
 }
 main .why_choose_us .images_top_choose_us img {
   z-index: 1;
@@ -343,6 +338,8 @@ main .about_us .title_about_us h2 {
 }
 main .about_us .title_about_us p {
   padding-top: 20px;
+  font-family: "Kanit", sans-serif;
+  font-weight: 400;
 }
 main .about_us .title_about_us .icon_about_absolute {
   position: absolute;
@@ -376,63 +373,17 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us {
   padding: 20px 30px;
   border-radius: 5px;
   font-family: "brands";
-  font-weight: 400;
+  font-weight: 500;
   color: #FFFFFF;
+  font-family: "Kanit", sans-serif;
 }
 main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   padding-left: 10px;
 }
 
-@media only screen and (max-width: 1600px) {
-  .why_choose_us .circle_food {
-    width: 40%;
-  }
-  .why_choose_us .images_top_choose_us {
-    padding: 10% 2% 2% 10%;
-  }
-  .why_choose_us .about_us .title_about_us h2 {
-    margin-top: 30px;
-  }
-  .why_choose_us .about_us .title_about_us .icon_about_absolute {
-    top: 0;
-    right: 10%;
-  }
-  .why_choose_us .about_us .contenu_about_us {
-    margin: 7% 15%;
-  }
-}
-@media only screen and (max-width: 1300px) {
-  .about_us .title_about_us h2 {
-    font-size: 3rem;
-    margin-top: 100px;
-  }
-  .about_us .title_about_us .icon_about_absolute {
-    top: 0;
-    right: 10%;
-  }
-  .about_us .contenu_about_us {
-    margin: 7% 10%;
-  }
-  .about_us .about_us_absolute {
-    top: 70px;
-    font-size: 6rem;
-  }
-}
-@media only screen and (max-width: 1200px) {
-  .why_choose_us .images_top_choose_us {
-    padding: 10% 2% 2% 10%;
-  }
+@media only screen and (max-width: 1500px) {
   .why_choose_us .images_top_choose_us img {
-    width: 200px;
-  }
-  .why_choose_us .about_us .contenu_about_us {
-    margin: 7% 5%;
-  }
-}
-@media only screen and (max-width: 950px) {
-  .why_choose_us .circle_food {
-    width: 50%;
-    border: solid 10px;
+    width: 230px;
   }
   .why_choose_us .about_us .about_us_absolute {
     font-size: 7rem;
@@ -443,7 +394,34 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   }
   .why_choose_us .about_us .title_about_us .icon_about_absolute {
     top: 0;
-    right: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100px;
+  }
+  .why_choose_us .about_us .contenu_about_us {
+    width: 90%;
+  }
+}
+@media only screen and (max-width: 1200px) {
+  .why_choose_us .images_top_choose_us img {
+    width: 200px;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .why_choose_us .images_top_choose_us img {
+    width: 180px;
+  }
+  .why_choose_us .about_us .about_us_absolute {
+    font-size: 7rem;
+  }
+  .why_choose_us .about_us .title_about_us h2 {
+    font-size: 2rem;
+    margin-top: 100px;
+  }
+  .why_choose_us .about_us .title_about_us .icon_about_absolute {
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
     width: 100px;
   }
   .why_choose_us .about_us .contenu_about_us {
@@ -451,76 +429,15 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
     flex-direction: column;
     text-align: center;
   }
-  .why_choose_us .about_us .contenu_about_us .text_about_us p {
-    font-size: 1.1rem;
-  }
 }
-@media only screen and (max-width: 650px) {
-  .why_choose_us .circle_food {
-    width: 80%;
-    border: solid 10px;
-  }
-  .why_choose_us .images_top_choose_us {
-    flex-direction: column;
-  }
-  .why_choose_us .images_top_choose_us img:first-child {
-    margin-top: 180px;
-    margin-bottom: 30px;
-  }
-  .why_choose_us .about_us .about_us_absolute {
-    font-size: 5rem;
-  }
-}
-@media only screen and (max-width: 450px) {
-  .why_choose_us .about_us .about_us_absolute {
-    font-size: 3.5rem;
-  }
-  .why_choose_us .about_us .title_about_us h2 {
-    font-size: 1.5rem;
-    margin-top: 130px;
-  }
-}
-@media only screen and (max-width: 350px) {
-  .why_choose_us .circle_food {
-    width: 100%;
-    border: solid 10px;
-  }
+@media only screen and (max-width: 700px) {
   .why_choose_us .images_top_choose_us img {
-    margin-top: 70px;
-  }
-  .why_choose_us .about_us .about_us_absolute {
-    font-size: 3rem;
-  }
-  .why_choose_us .about_us .title_about_us h2 {
-    font-size: 1.5rem;
-    margin-top: 120px;
-  }
-  .why_choose_us .about_us .contenu_about_us .text_about_us p {
-    font-size: 1rem;
-    padding: 0% 10%;
+    width: 150px;
   }
 }
-@media only screen and (max-width: 300px) {
-  .why_choose_us .about_us .about_us_absolute {
-    font-size: 2.5rem;
-    top: 120px;
-  }
-  .why_choose_us .about_us .title_about_us h2 {
-    font-size: 1rem;
-    margin-top: 100px;
-  }
-  .why_choose_us .about_us .title_about_us p {
-    font-size: 0.8rem;
-  }
-  .why_choose_us .about_us .title_about_us .icon_about_absolute {
-    width: 70px;
-    top: 0;
-    right: 10%;
-  }
-  .why_choose_us .about_us .contenu_about_us .text_about_us p {
-    font-size: 1rem;
-    line-height: 30px;
-    padding: 0% 20%;
+@media only screen and (max-width: 500px) {
+  .why_choose_us .images_top_choose_us img {
+    width: 100px;
   }
 }
 .try_your_special_offer {
@@ -608,12 +525,596 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
     display: none;
   }
 }
+.latest-news {
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
+  align-items: center;
+}
+.latest-news .p-top {
+  position: absolute;
+  color: #FAF6F0;
+  top: 0;
+  left: 3%;
+  font-size: 10vw;
+  letter-spacing: 1rem;
+  z-index: -1;
+}
+
+.latest-news-title {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  align-items: center;
+  margin: 4rem 0 3rem 0;
+}
+.latest-news-title h2 {
+  font-weight: 500;
+  font-size: 4rem;
+}
+.latest-news-title p {
+  font-size: 1.8rem;
+}
+
+.news-container {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+}
+
+.news {
+  width: 30%;
+  background-color: #FAF6F0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  height: 100%;
+  font-size: 1.3rem;
+}
+.news img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.news button {
+  background-color: #FFFFFF;
+  font-weight: bold;
+  font-size: 1rem;
+  width: 60%;
+  padding: 1rem;
+  border: none;
+  border-radius: 0.35rem;
+  word-spacing: 0.2rem;
+}
+.news button:hover {
+  cursor: pointer;
+  background-color: #C8A96A;
+  color: #FFFFFF;
+}
+
+.news-text {
+  padding: 1rem 1rem 2rem 1rem;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.news-text p {
+  height: 5rem;
+}
+
+.date-user {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+}
+.date-user i {
+  color: #C8A96A;
+}
+.date-user p {
+  height: auto;
+  font-size: 1rem;
+}
+
+.news-photos {
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-bottom: 4rem;
+}
+
+@media (max-width: 1450px) {
+  .news {
+    width: 35%;
+  }
+}
+@media (max-width: 1300px) {
+  .news-container {
+    flex-direction: column;
+  }
+  .news {
+    width: 100%;
+    flex-direction: row;
+  }
+  .news-text {
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 1rem;
+  }
+  .news-text button {
+    width: 60%;
+  }
+  .date-user {
+    width: 80%;
+    gap: 1rem;
+    justify-content: space-between;
+  }
+  .date-user p {
+    font-size: 1.2rem;
+  }
+  .news-photos {
+    margin-top: 2rem;
+  }
+  .news-photos img {
+    height: 4rem;
+    width: 4rem;
+  }
+}
+@media (max-width: 1100px) {
+  .date-user {
+    width: 80%;
+    gap: 1rem;
+    justify-content: space-between;
+  }
+  .date-user p {
+    font-size: 0.9rem;
+  }
+}
+@media (max-width: 1000px) {
+  .latest-news {
+    gap: 0;
+  }
+  .news-container {
+    margin-bottom: 3rem;
+  }
+}
+@media (max-width: 900px) {
+  .news {
+    flex-direction: column;
+  }
+  .news .news-text {
+    padding: 0 0 1rem 0;
+  }
+  .news img {
+    width: 100%;
+  }
+  .news button {
+    width: 90%;
+  }
+  .news-text p {
+    height: auto;
+  }
+}
+@media (max-width: 700px) {
+  .latest-news-title {
+    margin-top: 2;
+    gap: 0;
+  }
+}
+@media (max-width: 600px) {
+  .date-user p {
+    font-size: 1rem;
+  }
+  .news-photos {
+    gap: 1rem;
+  }
+  .news-photos img {
+    height: 3.5rem;
+    width: 3.5rem;
+  }
+}
+.meet-chefs {
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: black;
+  justify-content: center;
+  align-items: center;
+  z-index: -1;
+  padding-top: 3rem;
+  padding-bottom: 10rem;
+}
+.meet-chefs p {
+  color: #FFFFFF;
+}
+.meet-chefs .p-top {
+  position: absolute;
+  color: rgba(255, 255, 255, 0.123);
+  top: 0;
+  left: 3%;
+  font-size: 10vw;
+  letter-spacing: 1rem;
+  z-index: -1;
+}
+
+.chefs-title {
+  color: #FFFFFF;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  text-align: center;
+  margin-bottom: 5rem;
+}
+.chefs-title h2 {
+  font-weight: 500;
+  font-size: 4rem;
+}
+.chefs-title p {
+  font-size: 1.8rem;
+}
+
+.chefs-container {
+  display: flex;
+  width: 80%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.chef-img {
+  width: 20%;
+}
+.chef-img img {
+  display: block;
+  width: 100%;
+}
+.chef-img:nth-child(2) {
+  box-shadow: 5em 10em 10em rgba(255, 255, 255, 0.13), 5em -6em 10em rgba(255, 255, 255, 0.13);
+}
+.chef-img:nth-child(3) {
+  box-shadow: -5em 10em 10em rgba(255, 255, 255, 0.13), -5em -6em 10em rgba(255, 255, 255, 0.178);
+}
+
+@media (max-width: 760px) {
+  .chefs-container {
+    row-gap: 4rem;
+  }
+  .chef-img {
+    width: 40%;
+  }
+}
+.restaurant-photos-container {
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5rem;
+  padding: 6rem 0rem;
+}
+.restaurant-photos-container button {
+  font-size: 1rem;
+  padding: 1rem 2rem;
+  background-color: #FFFFFF;
+  font-weight: bold;
+  border: 1px solid rgba(199, 199, 199, 0.452);
+  border-radius: 0.3rem;
+  word-spacing: 0.2rem;
+}
+.restaurant-photos-container button:hover {
+  cursor: pointer;
+  color: white;
+  background-color: #C8A96A;
+}
+.restaurant-photos-container .p-low {
+  position: absolute;
+  color: #FAF6F0;
+  top: 0;
+  left: 1%;
+  font-size: 11vw;
+  z-index: -1;
+}
+
+.restaurant-photos-title {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  text-align: center;
+}
+.restaurant-photos-title h2 {
+  font-weight: 500;
+  font-size: 4rem;
+}
+.restaurant-photos-title p {
+  font-size: 1.8rem;
+}
+
+.resto-photos {
+  width: 80%;
+  margin-top: 5rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  row-gap: 1.5rem;
+  column-gap: 1.5rem;
+}
+.resto-photos img {
+  width: 100%;
+  max-height: 350px;
+}
+
+.photos-together {
+  display: flex;
+  justify-content: space-between;
+}
+.photos-together img {
+  width: 48%;
+}
+
+@media (max-width: 900px) {
+  .resto-photos {
+    margin-top: auto;
+    row-gap: 0.5rem;
+    column-gap: 0.5rem;
+  }
+}
+@media (max-width: 800px) {
+  .resto-photos {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+  }
+  .resto-photos img {
+    max-height: 246.34px;
+  }
+  .photos-together img {
+    width: 49%;
+  }
+}
+footer {
+  color: rgb(138, 138, 138);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url(./img/footer/img-ng-footer.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  gap: 10rem;
+  flex-direction: column;
+  padding-bottom: 3rem;
+}
+
+.footer-title {
+  margin-top: 5rem;
+}
+
+.footer-links {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin-bottom: 2rem;
+}
+
+.footer-link {
+  width: 13.66%;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+.footer-link h3 {
+  color: rgb(255, 255, 255);
+  font-size: 2rem;
+}
+.footer-link ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.footer-link ul li {
+  display: flex;
+  gap: 0.5rem;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+.footer-link ul li i {
+  color: #c8a96a;
+}
+.footer-link ul li:hover {
+  color: white;
+}
+
+.footer-link-input {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+.footer-link-input p {
+  font-size: 1.5rem;
+}
+.footer-link-input h3 {
+  color: rgb(255, 255, 255);
+  font-size: 2rem;
+}
+.footer-link-input .email-input {
+  display: flex;
+  width: 100%;
+  max-height: 62px;
+}
+.footer-link-input .email-input input {
+  font-size: 1.2rem;
+  padding: 1rem;
+  height: 3rem;
+  width: 70%;
+  border: none;
+}
+.footer-link-input .email-input input:focus {
+  outline: none;
+}
+.footer-link-input .email-input button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  border: none;
+  height: 100%;
+  width: 14%;
+  background-color: #9e8553;
+  border: none;
+}
+.footer-link-input .email-input button:hover {
+  cursor: pointer;
+  background-color: #C8A96A;
+}
+
+.footer-bottom {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  padding-top: 5rem;
+  border-top: 1px solid rgba(255, 255, 255, 0.253);
+  font-size: 1.3rem;
+}
+.footer-bottom img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 80%;
+  margin: auto;
+  height: 6rem;
+  width: 6rem;
+}
+.footer-bottom p a {
+  text-decoration: none;
+  color: #c8a96a;
+}
+.footer-bottom .footer-socials {
+  display: flex;
+  gap: 2rem;
+}
+.footer-bottom .footer-socials a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  padding: 0.5rem;
+  border-radius: 50%;
+  background-color: rgb(138, 138, 138);
+  font-size: 1rem;
+  color: #b3b3b3;
+}
+.footer-bottom .footer-socials a:hover {
+  color: white;
+  background-color: #c8a96a;
+}
+
+@media (max-width: 1250px) {
+  .footer-title {
+    margin-top: 3rem;
+  }
+  .footer-bottom {
+    flex-direction: column;
+    align-items: center;
+    gap: 3rem;
+  }
+  .footer-bottom p {
+    margin-top: 2rem;
+  }
+  .footer-socials {
+    margin-bottom: 3.5rem;
+  }
+}
+@media (max-width: 1100px) {
+  .footer-links {
+    display: grid;
+    grid-template-columns: 60% 40%;
+    row-gap: 5rem;
+    column-gap: 1rem;
+  }
+  .footer-link {
+    width: 100%;
+    display: grid;
+    flex-direction: column;
+    text-align: start;
+  }
+  .footer-link-input {
+    width: 100%;
+  }
+}
+@media (max-width: 750px) {
+  footer {
+    gap: 5rem;
+  }
+  .footer-links {
+    display: grid;
+    row-gap: 5rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 600px) {
+  .footer-link ul li {
+    font-size: 1.2rem;
+  }
+  .footer-link-input .email-input input {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 450px) {
+  .footer-links {
+    text-align: center;
+    grid-template-columns: 50% 50%;
+    column-gap: 2rem;
+    row-gap: 3rem;
+  }
+  .footer-link-input {
+    text-align: start;
+  }
+  .footer-link-input p {
+    font-size: 1.2rem;
+  }
+  .footer-link-input input {
+    height: auto;
+  }
+  .footer-link ul {
+    text-align: start;
+    gap: 0.2rem;
+  }
+  .footer-link ul li i {
+    text-align: center;
+  }
+  .contact {
+    text-align: center;
+  }
+  .contact ul li {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.1rem;
+    text-align: center;
+  }
+  .footer-bottom {
+    text-align: center;
+  }
+}
 @font-face {
   font-family: "Baanoo";
   src: url("./webfonts_Baanoo/Baanoo.ttf.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
+/* font-family: 'Kanit', sans-serif; 100-200-300-400-500-600*/
 * {
   box-sizing: border-box;
   padding: 0;
@@ -625,6 +1126,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 
 body {
   width: 100%;
+  overflow-x: hidden;
 }
 
 /*# sourceMappingURL=style.css.map */
